--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 .hero {
-    background: url(./images/Shypshyna.webp) no-repeat center center;
+    background: url(../images/Shypshyna.webp) no-repeat center center;
     background-size: cover;
     height: 400px;
     
